--- a/_config.yml
+++ b/_config.yml
@@ -69,3 +69,8 @@ theme: next
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type:
+# add post views
+leancloud_visitors:
+  enable: true
+  app_id: **wzag8w6Xb109JI0Ta2AEGipy-gzGzoHsz**
+  app_key: **AjOLnfLAmSJKmfpxLwWh9qK3**
